# Lap-Trinh-Song-Song---Thuat-Toan-Merge-Sort

./: .gitignore  README.md  graph_plot.py
Compare_png/: README.md
Compare_png/Ncu_analysis/: Dicussion.txt
Merge_sort_cuda/: CMakeLists.txt
Merge_sort_cuda/MergeSort_cudalib/: CMakeLists.txt  Cuda_check_err.cu  README.md  merge_sort_cudalib.cu  merge_sort_cudalib.cuh
Merge_sort_cuda/NecessaryLib/: CMakeLists.txt  neces_lib.cu  neces_lib.cuh
Merge_sort_cuda/cmake_build/: README.md  cmake_cuda.bat  cmake_msys2.bat  run_cuda.bat
Merge_sort_cuda/main/: main.cu
Merge_sort_cuda/main/Time_test/: e_100mil.csv  e_100mil_2nd.csv  e_100mil_ncu.csv  e_100mil_nsys.csv  e_100mil_saveEnergy.csv  e_10mil.csv  e_1mil.csv  e_50mil.csv  e_60mil.csv  result.csv
Merge_sort_cuda/main/Time_test/100k/: e_100k_1024mk_32ms.csv  e_100k_128mk_16ms.csv  e_100k_256mk_16ms.csv
Merge_sort_cuda/main/Time_test/100mil/: e_100mil_256mk_16ms(1).csv  e_100mil_256mk_24ms.csv  e_100mil_256mk_8ms.csv
Merge_sort_cuda/main/Time_test/100mil/1024mk_24ms_x/: e_100mil_1024mk_24ms.csv
Merge_sort_cuda/main/Time_test/100mil/1024mk_32ms/: e_100mil_1024mk_32ms(2).csv
Merge_sort_cuda/main/Time_test/100mil/128mk_16ms/: e_100mil_128mk_16ms(1).csv  e_100mil_128mk_16ms(2).csv
Merge_sort_cuda/main/Time_test/100mil/256mk_16ms/: e_100mil_256mk_16ms(2).csv  e_100mil_256mk_16ms(3).csv
Merge_sort_cuda/main/Time_test/100mil/256mk_24ms_x/: e_100mil_256mk_24ms.csv
Merge_sort_cuda/main/Time_test/10mil/: e_10mil_1024mk_32ms(1).csv  e_10mil_1024mk_32ms(2).csv  e_10mil_128mk_16ms.csv  e_10mil_256mk_16ms.csv  e_10mil_256mk_24ms.csv
Merge_sort_cuda/main/Time_test/1mil/: e_1mil_1024mk_32ms.csv  e_1mil_128mk_16ms.csv  e_1mil_256mk_16ms.csv  e_1mil_256mk_24ms.csv
Merge_sort_cuda/main/Time_test/20mil/: e_20mil_1024mk_32ms.csv
Merge_sort_cuda/main/Time_test/30mil/: e_30mil_1024mk_32ms(1).csv  e_30mil_1024mk_32ms(2).csv  e_30mil_256mk_16ms.csv
Merge_sort_cuda/main/Time_test/60mil/: e_60mil_1024mk_32ms(1).csv  e_60mil_1024mk_32ms(2).csv  e_60mil_128mk_16ms.csv  e_60mil_256mk_16ms.csv  e_60mil_256mk_24ms.csv
Merge_sort_cuda/pseudo_num/: CMakeLists.txt  pseudo_num_gen.c  pseudo_num_gen.h
Merge_sort_omp/: merge_par.c
Merge_sort_omp/merge_omp_task/: Task_omp_merge_sort.csv  merge_omp_task.c
Merge_sort_omp/merge_omp_task/Time_test/: e_100k.csv  e_10mil.csv  e_1mil.csv  e_500mil.csv  e_60mil.csv
Merge_sort_omp/merge_sections/: Sections_merge_sort.csv  merge_sections.c
Merge_sort_omp/merge_sections/Time_test/: e_100k.csv  e_100mil.csv  e_10mil.csv  e_1mil.csv  e_500mil.csv
Merge_sort_sequential/: Sequential_merge_sort.csv  merge_sort.c
Merge_sort_sequential/Time_test/: e_100k.csv  e_10mil.csv  e_1mil.csv  e_20mil.csv  e_30mil.csv  e_500mil.csv  e_60mil.csv
Merge_sort_serial/: merge_serial.c
Python_process/: SpeedUp_test.py  average_time.py  compare_average_time.py  execution_time.py
